--- a/css/style.scss
+++ b/css/style.scss
@@ -1,27 +1,28 @@
 @font-face {
   font-family: 'Merriweather';
-   src: url("../assets/fonts/Merriweather-Bold.ttf");
-   font-weight: 700;
- }
+  src: url("../assets/fonts/Merriweather-Bold.ttf");
+  font-weight: 700;
+}
 
- @font-face {
+@font-face {
   font-family: 'Merriweather';
   src: url("../assets/fonts/Merriweather-Regular.ttf");
   font-weight: 400;
- }
+}
 
- @font-face {
+@font-face {
   font-family: 'Inter';
   src: url("../assets/fonts/Inter-Regular.ttf");
   font-weight: 400;
 }
+
 @font-face {
   font-family: 'Inter';
   src: url("../assets/fonts/Inter-Bold.ttf");
   font-weight: 700;
 }
 
-*{
+* {
   box-sizing: border-box;
   margin: 0;
   padding: 0;
@@ -30,7 +31,7 @@
 html {
   scroll-behavior: smooth;
   height: 100%;
-  width: 100%; 
+  width: 100%;
 }
 
 body {
@@ -50,18 +51,25 @@ body {
   }
 }
 
-li, ul {
-  list-style: none;
-  
+.overflow {
+  overflow: hidden;
 }
+
+li,
+ul {
+  list-style: none;
+
+}
+
 .container {
   max-width: 1440px;
   overflow: hidden;
   margin: 0 auto;
-  padding: 100px 20px 0;
+  padding: 100px 20px 0px;
 
   @media (max-width: 768px) {
-    padding: 70px 20px 0;
+    max-width: 768px;
+    padding: 60px 20px 0px;
   }
 }
 
@@ -72,29 +80,30 @@ section {
 a {
   text-decoration: none;
   color: inherit;
-  transition: 0.3s;
 }
 
 a:hover {
-  color: #bdae82; 
+  color: #bdae82;
 }
 
-textarea{
+textarea {
   resize: none;
 }
 
-input, textarea {
+input,
+textarea {
   font: inherit;
   background-color: rgba(0, 0, 0, 0.5);
-  padding:  5px 20px;
+  padding: 5px 20px;
   border: 2px solid #bdae82;
   color: #bdae82;
 }
 
-input:active, textarea:active {
+input:active,
+textarea:active {
   font: inherit;
   background-color: transparent;
-  padding:  0 20px;
+  padding: 0 20px;
   border: 2px solid #bdae82;
 }
 
@@ -113,24 +122,31 @@ input:-webkit-autofill:active {
   transition: background-color 0s ease-in-out 9000s;
 }
 
-.icon:hover {
-  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%)
-    contrast(87%);
-    transition: 0.3s;
+.icon,
+a,
+button,
+.btn {
+  transition: 0.5s;
+  cursor: pointer;
 }
+
+.icon:hover {
+  filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
+
+}
+
 button {
   cursor: pointer;
   background-color: transparent;
   border: 0;
-  font:inherit;
+  font: inherit;
 }
 
 .btn {
-  width: 220px; 
+  width: 220px;
   height: 55px;
-  background-color:#bdae82;
+  background-color: #bdae82;
   color: #000000;
-  transition: 0.3s;
 }
 
 .btn-tr {
@@ -194,9 +210,8 @@ button:hover {
 .hamburger {
   display: none;
   cursor: pointer;
-  -webkit-transition: all 0.3s ease-in-out;
-  -o-transition: all 0.3s ease-in-out;
-  transition: all 0.3s ease-in-out;
+  margin-right: 5px;
+  transition: all 0.4s ease-in-out;
 }
 
 .hamburger.is-active {
@@ -204,25 +219,19 @@ button:hover {
   z-index: 11;
 }
 
-@keyframes smallbig{
-  0%, 100%{
-    -webkit-transform: scale(1);
-    -ms-transform: scale(1);
-    -o-transform: scale(1);
+@keyframes smallbig {
+
+  0%,
+  100% {
     transform: scale(1);
   }
 
-  50%{
-    -webkit-transform: scale(0);
-    -ms-transform: scale(0);
-    -o-transform: scale(0);
+  50% {
     transform: scale(0);
   }
 }
 
-.hamburger.is-active .line{
-  -webkit-transition-delay: 0.2s;
-  -o-transition-delay: 0.2s;
+.hamburger.is-active .line {
   transition-delay: 0.2s;
 }
 
@@ -238,9 +247,7 @@ button:hover {
 }
 
 .hamburger.is-active .line1 {
-  -webkit-transform: translateY(13px) rotate(45deg);
-  -ms-transform: translateY(13px) rotate(45deg);
-  -o-transform: translateY(13px) rotate(45deg);
+
   transform: translateY(13px) rotate(45deg);
 }
 
@@ -249,19 +256,18 @@ button:hover {
 }
 
 .hamburger.is-active .line3 {
-  -webkit-transform: translateY(-13px) rotate(-45deg);
-  -ms-transform: translateY(-13px) rotate(-45deg);
-  -o-transform: translateY(-13px) rotate(-45deg);
+
   transform: translateY(-13px) rotate(-45deg);
 }
 
 
-                                   /*blocks styles*/
+/*===================blocks styles===========================*/
 
 /*header style*/
 
 .header {
-  //position: relative;
+  position: relative;
+  overflow: hidden;
   background: url('../assets/img/bg.jpg');
   background-repeat: no-repeat;
   background-position: center 0;
@@ -272,11 +278,12 @@ button:hover {
   padding: 20px;
 
   @media (max-width: 768px) {
+
     .hamburger {
       display: block;
     }
 
-    padding: 20px 60px;
+    padding: 20px 60px 20px 60px;
     background-position: -5px -30px;
     background-size: auto 620px
   }
@@ -295,17 +302,17 @@ button:hover {
   }
 
   &__nav {
-   margin-left: auto;
-   box-sizing: content-box;
-   
-   @media (max-width: 768px) {
-      position: absolute; 
+    margin-left: auto;
+    box-sizing: content-box;
+
+    @media (max-width: 768px) {
+      position: fixed;
       overflow: hidden;
-      top: 0;
-      right: 800px;
+      top: 0px;
+      right: -800px;
       transition: right 1.8s;
       width: 100%;
-      height: 100%;
+      height: 100vh;
       background-color: #000000a9;
       z-index: 10;
       font: 400 25px/60px 'Inter';
@@ -320,14 +327,14 @@ button:hover {
       background-color: #000;
       margin-left: auto;
       padding: 135px 0 0 127px;
-      }
+    }
 
-      @media (max-width: 620px) {
-        padding: 70px 0 0 70px;
-      }
+    @media (max-width: 619px) {
+      padding: 70px 0 0 70px;
+    }
   }
 
-  &__nav.active-menu{
+  &__nav.active-menu {
     top: 0;
     right: 0;
     transition: right 1s;
@@ -339,29 +346,34 @@ button:hover {
     @media (max-width: 768px) {
       transform: translateX(300%);
       transition: 2s;
+      margin-bottom: 16px;
     }
   }
-  
+
   .active-menu {
     .header__nav-item:nth-child(1) {
       transform: translateX(0%);
-      transition: transform 0.8s ease-out;
-    }
-    .header__nav-item:nth-child(2) {
-      transform: translateX(0%);
       transition: transform 1s ease-out;
     }
+
+    .header__nav-item:nth-child(2) {
+      transform: translateX(0%);
+      transition: transform 1.3s ease-out;
+    }
+
     .header__nav-item:nth-child(3) {
       transform: translateX(0%);
-      transition: transform 1.2s ease-out;
+      transition: transform 1.6s ease-out;
     }
+
     .header__nav-item:nth-child(4) {
       transform: translateX(0%);
-      transition: transform 1.4s ease-out;
+      transition: transform 1.9s ease-out;
     }
+
     .header__nav-item:nth-child(5) {
       transform: translateX(0%);
-      transition: transform 1.6s ease-out;
+      transition: transform 2.1s ease-out;
     }
   }
 
@@ -379,10 +391,11 @@ button:hover {
 
   &__switch {
     font: 700 20px/50px 'Inter';
+
     @media (max-width: 768px) {
       margin: 0 20px 0 auto;
     }
-  } 
+  }
 
   &__switch-en {
     color: #bdae82;
@@ -395,6 +408,7 @@ button:hover {
 
   &__switch-ru {
     margin-left: 10px;
+
     @media (max-width: 768px) {
       margin-left: 20px;
     }
@@ -402,72 +416,73 @@ button:hover {
 
 }
 
-                            /*main*/
+/*=========================================main=========================*/
 /*hero style*/
 
 .hero {
 
-		&__container {
-      height: 820px;
-      background-image: url('../assets/img/bg.jpg');
-      background-position: center -90px;
-      background-repeat: no-repeat;
-      padding-top: 160px;
+  &__container {
+    height: 820px;
+    background-image: url('../assets/img/bg.jpg');
+    background-position: center -90px;
+    background-repeat: no-repeat;
+    padding-top: 160px;
 
-      @media (max-width: 768px) {
-        padding-top: 78px;
-        height: 500px;
-        background-position: -5px -120px;
-        background-size: auto 620px;
-      }
+    @media (max-width: 768px) {
+      padding-top: 78px;
+      height: 500px;
+      background-position: -5px -120px;
+      background-size: auto 620px;
+    }
 
-      @media (max-width: 700px) {
-        padding-top: 30px;
-        height: 500px;
-        background-position: center -120px;
-      }
-		}
+    @media (max-width: 700px) {
+      padding-top: 30px;
+      height: 500px;
+      background-position: center -120px;
+    }
+  }
 
-		&__content {
-      max-width: 470px;
-      margin: 0 auto 0 60px;
+  &__content {
+    max-width: 470px;
+    margin: 0 auto 0 60px;
 
-      @media (max-width: 768px) {
-        max-width: 390px;
-        margin-left: 40px;
-      }
-      @media (max-width: 700px) {
-        max-width: 60%;
-        margin-left: 0px;
-      }
-		}
+    @media (max-width: 768px) {
+      max-width: 390px;
+      margin-left: 40px;
+    }
 
-		&__content-title {
-      font: 700 60px/120px 'Merriweather';
-      margin-bottom: 10px;
+    @media (max-width: 700px) {
+      max-width: 60%;
+      margin-left: 0px;
+    }
+  }
 
-      @media (max-width: 768px) {
-        font: 400 32px/64px 'Merriweather';
-        margin-bottom: 20px;
-      }
+  &__content-title {
+    font: 700 60px/120px 'Merriweather';
+    margin-bottom: 10px;
 
-      @media (max-width: 700px) {
-        font: 400 28px/55px 'Merriweather';
-        margin-bottom: 40px;
-      }
-		}
+    @media (max-width: 768px) {
+      font: 400 32px/64px 'Merriweather';
+      margin-bottom: 20px;
+    }
 
-		&__content-txt {
-      margin-bottom: 25px;
+    @media (max-width: 700px) {
+      font: 400 28px/55px 'Merriweather';
+      margin-bottom: 40px;
+    }
+  }
 
-      @media (max-width: 768px) {
-        margin-bottom: 59px;
-        
-      }
-      @media (max-width: 700px) {
-        margin-bottom: 59px;
-      }
-		}
+  &__content-txt {
+    margin-bottom: 25px;
+
+    @media (max-width: 768px) {
+      margin-bottom: 59px;
+    }
+
+    @media (max-width: 700px) {
+      margin-bottom: 59px;
+    }
+  }
 }
 
 /* skills style */
@@ -490,7 +505,7 @@ button:hover {
 
     @media (max-width: 768px) {
       justify-content: space-around;
-      padding: 10px 20px 0;
+      padding: 10px 20px 7px;
     }
   }
 
@@ -498,13 +513,13 @@ button:hover {
     text-align: center;
     max-width: 320px;
     padding: 100px 20px 10px;
-    background-position: center top;
+    background-position: center 5px;
     background-repeat: no-repeat;
     background-size: 62px 50px;
 
     @media (max-width: 768px) {
       padding: 85px 20px 10px;
-      margin-bottom: 65px;
+      margin-bottom: 62px;
     }
 
     @media (max-width: 710px) {
@@ -514,16 +529,19 @@ button:hover {
   }
 
   &__item:nth-child(1) {
-    background-image: url('../assets/svg/skills/camera-icon.svg'); 
+    background-image: url('../assets/svg/skills/camera-icon.svg');
   }
+
   &__item:nth-child(2) {
-    background-image: url('../assets/svg/skills/video-icon.svg'); 
+    background-image: url('../assets/svg/skills/video-icon.svg');
   }
+
   &__item:nth-child(3) {
-    background-image: url('../assets/svg/skills/image-icon.svg'); 
+    background-image: url('../assets/svg/skills/image-icon.svg');
   }
+
   &__item:nth-child(4) {
-    background-image: url('../assets/svg/skills/mic-icon.svg'); 
+    background-image: url('../assets/svg/skills/mic-icon.svg');
   }
 
   &__item-img {
@@ -561,13 +579,13 @@ button:hover {
 
     @media (max-width: 500px) {
       padding: 100px 40px 0;
-    } 
+    }
   }
 
   .title-wrapper {
     @media (max-width: 768px) {
       margin-bottom: 20px;
-    } 
+    }
   }
 
   &__buttons {
@@ -598,50 +616,53 @@ button:hover {
 /*video style */
 
 .video {
-    .container {
-      padding: 100px 20px 0;
-      @media (max-width: 768px) {
-        padding: 100px 20px 30px;
-      }
-      @media (max-width: 700px) {
-        padding: 70px 20px 0;
-      }
+  .container {
+    padding: 100px 20px 0;
+
+    @media (max-width: 768px) {
+      padding: 100px 20px 30px;
     }
 
-    .title-wrapper {
-      @media (max-width: 768px) {
-        margin-bottom: 20px;
-      } 
+    @media (max-width: 700px) {
+      padding: 70px 20px 0;
     }
-
-		&__player {
-      position: relative;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      img {
-        width: 100%;
-      }
-
-      @media (max-width: 1100px) {
-        img {
-          width: 115%;
-        }
-		  }
   }
 
-    &__player-btn {
-      position: absolute;
-      background-image: url('../assets/svg/video/play.svg');
-      width: 130px;
-      height: 130px;
+  .title-wrapper {
+    @media (max-width: 768px) {
+      margin-bottom: 20px;
+    }
+  }
 
-      @media (max-width: 768px) {
-        width: 65px;
-        height: 65px;
-        background-size: contain;
+  &__player {
+    position: relative;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    img {
+      width: 100%;
+    }
+
+    @media (max-width: 1100px) {
+      img {
+        width: 115%;
       }
-		}
+    }
+  }
+
+  &__player-btn {
+    position: absolute;
+    background-image: url('../assets/svg/video/play.svg');
+    width: 130px;
+    height: 130px;
+
+    @media (max-width: 768px) {
+      width: 65px;
+      height: 65px;
+      background-size: contain;
+    }
+  }
 }
 
 /* price style */
@@ -650,68 +671,81 @@ button:hover {
   .title-wrapper {
     @media (max-width: 768px) {
       margin-bottom: 20px;
-    } 
+    }
   }
 
-    &__container {
-      padding-bottom: 100px;
+  &__container {
+    padding-bottom: 100px;
 
-      @media (max-width: 1439px) {
-        padding-bottom: 80px;
-      }
+    @media (max-width: 1439px) {
+      padding-bottom: 80px;
     }
 
-		&__list {
-      display: flex;
-      justify-content: space-between;
-      flex-wrap: wrap;
-      gap: 25px;
-      text-align: center;
+    @media (max-width: 768px) {
+      padding-top: 66px;
+      padding-bottom: 80px;
+    }
+  }
 
-      @media (max-width: 1439px) {
-        justify-content: center;
-        gap: 50px;
-      }  
-		}
 
-		&__card {
-      border: 3px solid #BDAE82;
-      padding: 39px 111px;
 
-      @media (max-width: 768px) {
-        padding: 39px 99px;
-      }
 
-      @media (max-width: 500px) {
-        padding: 20px 40px;
-      }
+  &__list {
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    gap: 25px;
+    text-align: center;
 
-      @media (max-width: 360px) {
-        padding: 20px 20px;
-      }
-		}
+    @media (max-width: 1439px) {
+      justify-content: center;
+      gap: 50px;
+    }
+  
+    @media (max-width: 768px) {
+      
+      gap: 51px;
+    }
+}
+  &__card {
+    border: 3px solid #BDAE82;
+    padding: 39px 111px;
 
-		&__card-title {
-      font: 700 28px/56px 'Merriweather';
-      margin-bottom: 20px;
-		}
+    @media (max-width: 768px) {
+      padding: 39px 98px;
+    }
 
-		&__card-price {
-      font: 700 24px/48px 'Merriweather';
-      color: #BDAE82;
-      margin-bottom: 20px;
-		}
+    @media (max-width: 500px) {
+      padding: 20px 40px;
+    }
 
-		&__card-info {
-      font: 400 18px/36px 'Inter';
-      margin-bottom: 41px;
-      span {
-        display: block;
-      }
-		}
+    @media (max-width: 360px) {
+      padding: 20px 20px;
+    }
+  }
+
+  &__card-title {
+    font: 700 28px/56px 'Merriweather';
+    margin-bottom: 20px;
+  }
+
+  &__card-price {
+    font: 700 24px/48px 'Merriweather';
+    color: #BDAE82;
+    margin-bottom: 20px;
+  }
+
+  &__card-info {
+    font: 400 18px/36px 'Inter';
+    margin-bottom: 41px;
+
+    span {
+      display: block;
+    }
+  }
 }
 
-/* contacts style */ 
+/* contacts style */
 
 
 .contacts {
@@ -762,113 +796,101 @@ button:hover {
   }
 
   &__form-btn {
-    
+
     @media (max-width: 768px) {
       margin: 0 auto;
     }
   }
 
   .section-title {
-    
-    display:block;
+
+    display: block;
     margin-bottom: 40px;
 
     @media (max-width: 768px) {
       margin-bottom: 51px;
     }
   }
-  
+
   .section-title::after,
   .section-title::before {
     display: none;
-  }   
+  }
 }
 
 /* footer style */
 
 .footer {
- 
-    display: flex;
-    justify-content: space-between;
-    padding: 50px 20px;
-    line-height: 50px;
 
-    @media (max-width: 768px) {
-      flex-direction: column;
-      justify-content: start;
-      align-items: center;
-      padding: 30px 0;
-      line-height: 24.2px;
+  display: flex;
+  justify-content: space-between;
+  padding: 50px 20px;
+  line-height: 50px;
+
+  @media (max-width: 768px) {
+    flex-direction: column;
+    justify-content: start;
+    align-items: center;
+    padding: 28px 0 29px;
+    line-height: 24.2px;
+  }
+
+  &__copyright {
+    display: flex;
+
+    span {
+      display: block;
+      margin-right: 20px;
     }
 
-		&__copyright {
-      display: flex;
-      span {
-        display: block;
-        margin-right: 20px;
-      }
-      @media (max-width: 768px) {
-        margin-bottom: 15px;
-      }
-		}
+    @media (max-width: 768px) {
+      margin-bottom: 15px;
+    }
+  }
 
-		&__school {
-      padding-left: 21px;
+  &__school {
+    padding-left: 21px;
 
-      @media (max-width: 768px) {
-        padding-left: 0;
-        margin-bottom: 15px;
-      }
-		}
+    @media (max-width: 768px) {
+      padding-left: 0;
+      margin-bottom: 20px;
+    }
+  }
 
-		&__social-link {
-      line-height: 50px;
-		}
+  &__social-link {
+    line-height: 50px;
+
+  }
 
 
-		&__social-list {
-      display: flex;
-      justify-content: space-between;
-      gap: 23px;
-      padding-top: 10px;
-		}
+  &__social-list {
+    display: flex;
+    justify-content: space-between;
+    gap: 23px;
+    padding-top: 10px;
+  }
 
-		&__social-item {  
-      width: 30px;
-      height: 30px;
-      background-size: 30px 30px;
-      background-repeat: no-repeat;
-      background-position: center bottom;
-		}
-    &__social-item:nth-child(1) {
-      background-image: url('../assets/svg/footer/inst.svg');
-		}
-    &__social-item:nth-child(2) {
-      background-image: url('../assets/svg/footer/fb.svg');
-		}
-    &__social-item:nth-child(3) {
-      background-image: url('../assets/svg/footer/tw.svg');
-		}
-    &__social-item:nth-child(4) {
-      background-image: url('../assets/svg/footer/pin.svg');
-		}
+  &__social-item {
+    width: 30px;
+    height: 30px;
+    background-size: 30px 30px;
+    background-repeat: no-repeat;
+    background-position: center bottom;
+  }
+
+  &__social-item:nth-child(1) {
+    background-image: url('../assets/svg/footer/inst.svg');
+  }
+
+  &__social-item:nth-child(2) {
+    background-image: url('../assets/svg/footer/fb.svg');
+  }
+
+  &__social-item:nth-child(3) {
+    background-image: url('../assets/svg/footer/tw.svg');
+  }
+
+  &__social-item:nth-child(4) {
+    background-image: url('../assets/svg/footer/pin.svg');
+  }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
