--- a/css/style.css
+++ b/css/style.css
@@ -295,6 +295,10 @@ button:hover {
   transition: all 0.3s ease-in-out;
 }
 
+.hamburger:hover .line {
+  background-color: #BDAE82;
+}
+
 .hamburger.is-active .line1 {
   -webkit-transform: translateY(13px) rotate(45deg);
           transform: translateY(13px) rotate(45deg);
@@ -748,18 +752,18 @@ button:hover {
 
 /*video style */
 .video .container {
-  padding: 100px 20px 0;
+  padding: 100px 20px 0px;
 }
 
 @media (max-width: 768px) {
   .video .container {
-    padding: 100px 20px 30px;
+    padding: 100px 0px 30px;
   }
 }
 
 @media (max-width: 700px) {
   .video .container {
-    padding: 70px 20px 0;
+    padding: 70px 0px 0px;
   }
 }
 
@@ -769,7 +773,16 @@ button:hover {
   }
 }
 
+@media (max-width: 415px) {
+  .video .title-wrapper {
+    max-width: 90%;
+  }
+}
+
 .video__player {
+  background: url("../assets/img/Video/video.jpg") center top/cover no-repeat;
+  width: 100%;
+  height: 705px;
   position: relative;
   display: -webkit-box;
   display: -ms-flexbox;
@@ -782,13 +795,17 @@ button:hover {
           align-items: center;
 }
 
-.video__player img {
-  width: 100%;
+@media (max-width: 768px) {
+  .video__player {
+    background: url("../assets/img/Video/video768.jpg") center center/contain no-repeat;
+    height: 418px;
+  }
 }
 
-@media (max-width: 1100px) {
-  .video__player img {
-    width: 115%;
+@media (max-width: 500px) {
+  .video__player {
+    background: url("../assets/img/Video/video768.jpg") center center/contain no-repeat;
+    height: 300px;
   }
 }
 
@@ -826,7 +843,14 @@ button:hover {
 
 @media (max-width: 768px) {
   .price__container {
-    padding-top: 66px;
+    padding-top: 70px;
+    padding-bottom: 80px;
+  }
+}
+
+@media (max-width: 700px) {
+  .price__container {
+    padding-top: 30px;
     padding-bottom: 80px;
   }
 }
@@ -918,6 +942,12 @@ button:hover {
     background-size: auto 600px;
     background-position: center top;
     padding-top: 73px;
+  }
+}
+
+@media (max-width: 750px) {
+  .contacts__container {
+    background-position: -200px top;
   }
 }
 
