--- a/css/style.scss
+++ b/css/style.scss
@@ -132,7 +132,6 @@ button,
 
 .icon:hover {
   filter: invert(26%) sepia(15%) saturate(638%) hue-rotate(7deg) brightness(92%) contrast(87%);
-
 }
 
 button {
@@ -244,6 +243,10 @@ button:hover {
   -webkit-transition: all 0.3s ease-in-out;
   -o-transition: all 0.3s ease-in-out;
   transition: all 0.3s ease-in-out;
+}
+
+.hamburger:hover .line {
+  background-color: #BDAE82;
 }
 
 .hamburger.is-active .line1 {
@@ -617,14 +620,16 @@ button:hover {
 
 .video {
   .container {
-    padding: 100px 20px 0;
+    
+    padding: 100px 20px 0px;
 
     @media (max-width: 768px) {
-      padding: 100px 20px 30px;
+      padding: 100px 0px 30px;
+      
     }
 
     @media (max-width: 700px) {
-      padding: 70px 20px 0;
+      padding: 70px 0px 0px;
     }
   }
 
@@ -632,22 +637,33 @@ button:hover {
     @media (max-width: 768px) {
       margin-bottom: 20px;
     }
+    @media (max-width: 415px) {
+      max-width: 90%;
+    }
   }
 
   &__player {
+    background: url('../assets/img/Video/video.jpg')center top / cover no-repeat;
+    
+    width: 100%;
+    height: 705px;
     position: relative;
     display: flex;
     justify-content: center;
     align-items: center;
 
-    img {
-      width: 100%;
+    @media (max-width: 768px) {
+      background: url('../assets/img/Video/video768.jpg')center center / contain no-repeat;
+      height: 418px;
+     
+      
     }
 
-    @media (max-width: 1100px) {
-      img {
-        width: 115%;
-      }
+    @media (max-width: 500px) {
+      background: url('../assets/img/Video/video768.jpg')center center / contain no-repeat;
+      height: 300px;
+
+
     }
   }
 
@@ -682,7 +698,12 @@ button:hover {
     }
 
     @media (max-width: 768px) {
-      padding-top: 66px;
+      padding-top: 70px;
+      padding-bottom: 80px;
+    }
+
+    @media (max-width: 700px) {
+      padding-top: 30px;
       padding-bottom: 80px;
     }
   }
@@ -764,6 +785,11 @@ button:hover {
       background-position: center top;
       padding-top: 73px;
     }
+
+    @media (max-width: 750px) {
+      background-position: -200px top; 
+    }
+
   }
 
   &__content {
