--- a/css/style.css
+++ b/css/style.css
@@ -184,6 +184,15 @@ button {
   color: #bdae82;
 }
 
+.btn-tr._active {
+  background-color: #bdae82;
+  color: #000000;
+}
+
+.btn-tr._active:hover {
+  color: #ffffff;
+}
+
 button:hover {
   color: #ffffff;
 }
