--- a/css/style.scss
+++ b/css/style.scss
@@ -306,6 +306,10 @@ button:hover {
     padding: 20px;
   }
 
+  .lang-btn._active {
+    color: #bdae82;
+  }
+
   &__logo {
     background-image: url('../assets/svg/header/logo.svg');
     background-size: contain;
@@ -411,7 +415,7 @@ button:hover {
   }
 
   &__switch-en {
-    color: #bdae82;
+    
     margin-right: 10px;
 
     @media (max-width: 768px) {
