--- a/css/style.scss
+++ b/css/style.scss
@@ -817,7 +817,7 @@ margin-right: 35px;
   &__list {
     display: flex;
     justify-content: space-between;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     gap: 23px;
     text-align: center;
 
@@ -827,7 +827,7 @@ margin-right: 35px;
     }
   
     @media (max-width: 768px) {
-      
+      flex-wrap: wrap;
       gap: 51px;
     }
 }
